Refactor route for adding submitted reference

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -28,7 +28,7 @@ Edit Reference | References
             <input type="text" name="publisher" class="inputfield" value="{{reference.publisher}}" placeholder="Enter publisher name" required>
         </p>
         <p>Editor(s):<br>
-            <input type="text" name="editor" class="inputfield" value="{{editors}}" placeholder="Enter editor(s)" required>
+            <input type="text" name="editors" class="inputfield" value="{{editors}}" placeholder="Enter editor(s)" required>
         </p>
     {% elif reference.reference_type == "inbook" %}
         <p>Author(s):<br>
