--- a/src/templates/new_misc_reference.html
+++ b/src/templates/new_misc_reference.html
@@ -13,7 +13,7 @@ Add a new miscellaneous reference | References
 
 <h2>Add a new miscellaneous reference</h2>
 
-<form action="/add_misc_reference" method="POST">
+<form action="/add_reference" method="POST">
     <p>Author(s):<br>
         <textarea name="authors" rows="5" cols="30" class="inputfield" placeholder="(Optional) Enter author(s), separate authors by semicolons (;)" required></textarea>
     </p>
@@ -33,11 +33,12 @@ Add a new miscellaneous reference | References
         <input type="text" name="note" class="inputfield" placeholder="(Optional) Enter note">
     </p>
     <p>Reference key:<br>
-        <input type="text" name="reference_key" class="inputfield" pattern="[a-zA-Z0-9\-_:]+" placeholder="Enter a unique reference key" required>
+        <input type="text" name="ref_key" class="inputfield" pattern="[a-zA-Z0-9\-_:]+" placeholder="Enter a unique reference key" required>
     </p>
     <p>Keyword(s):<br>
         <textarea rows="4" cols="30" type="text" class="inputfield" name="keywords" placeholder="(Optional) Enter keyword(s), separate keywords by semicolons (;)"></textarea>
     </p>
+    <input type="hidden" name="ref_type" value="misc">
     <input type="submit" class="button" value="Submit">
 </form>
 
