--- a/src/templates/delete.html
+++ b/src/templates/delete.html
@@ -11,7 +11,7 @@ Delete Reference | References
 {% block body %}
 
 <h2>Are you sure you want to delete this reference?</h2>
-<h3>{{reference.title}}, {{reference.author}}, {{reference.year}}, {{reference.publisher}} </h3>
+<h3>{{reference}} </h3>
 
 
 <form action="/delete" method="POST">
