Add functionality for adding a ref with doi

--- a/src/templates/selector.html
+++ b/src/templates/selector.html
@@ -24,6 +24,9 @@ Select reference type | References
 <p>
     <a class="button reftype" href={{url_for("add_misc_reference") }}> Miscellaneous </a>
 </p>
+<p>
+    <a class="button reftype" href={{url_for("add_reference_with_doi") }}> Add a reference using DOI </a>
+</p>
 
 <a class="button frontpage" href="/">Go to front page</a>
 
