Refactor adding reference to utilize Reference class

--- a/src/templates/new_book_reference.html
+++ b/src/templates/new_book_reference.html
@@ -30,12 +30,12 @@ Add a new book reference | References
         <input type="text" name="editors" class="inputfield" placeholder="Enter editor(s), separate editors by semicolons (;)" required>
     </p>
     <p>Reference key:<br>
-        <input type="text" name="ref_key" class="inputfield" placeholder="Enter a unique reference key" required>
+        <input type="text" name="reference_key" class="inputfield" placeholder="Enter a unique reference key" required>
     </p>
     <p>Keyword(s):<br>
         <textarea rows="4" cols="30" type="text" class="inputfield" name="keywords" placeholder="(Optional) Enter keyword(s), separate keywords by semicolons (;)"></textarea>
     </p>
-    <input type="hidden" name="ref_type" value="book">
+    <input type="hidden" name="reference_type" value="book">
     <input type="submit" class="button" value="Submit">
 </form>
 
