--- a/src/templates/new_inbook_reference.html
+++ b/src/templates/new_inbook_reference.html
@@ -33,12 +33,12 @@ Add a new inbook reference | References
         <textarea name="editors" rows="2" cols="30" class="inputfield" placeholder="(Optional) Enter editor(s), separate editors by semicolons (;)"></textarea>
     </p>
     <p>Reference key:<br>
-        <input type="text" name="ref_key" class="inputfield" pattern="[a-zA-Z0-9\-_:]+" placeholder="Enter a unique reference key" required>
+        <input type="text" name="reference_key" class="inputfield" pattern="[a-zA-Z0-9\-_:]+" placeholder="Enter a unique reference key" required>
     </p>
     <p>Keyword(s):<br>
         <textarea rows="4" cols="30" type="text" class="inputfield" name="keywords" placeholder="(Optional) Enter keyword(s), separate keywords by semicolons (;)"></textarea>
     </p>
-    <input type="hidden" name="ref_type" value="inbook">
+    <input type="hidden" name="reference_type" value="inbook">
     <input type="submit" class="button" value="Submit">
 </form>
 
