Changed reference keys to be automatically generated, replaced the 'Go to front page' buttons on reference forms with 'Go back' buttons

--- a/src/templates/add_ref_with_doi.html
+++ b/src/templates/add_ref_with_doi.html
@@ -20,7 +20,7 @@ Add a reference with DOI | References
     <input type="submit" class="button" value="Submit">
 </form>
 
-<a class="button" href="/">Go to front page</a>
+<a class="button" href="/selector">Go back</a>
 
 
 {% endblock %}
