--- a/src/templates/new_article_reference.html
+++ b/src/templates/new_article_reference.html
@@ -39,7 +39,7 @@ Add a new article reference | References
         <input type="text" name="month" rows="2" cols="30" class="inputfield" placeholder="(Optional) Enter the month of publication.">
     </p>
     <p>Note:<br>
-        <textarea name="note" rows="5" cols="30" class="inputfield" placeholder="Miscellaneous information"></textarea>
+        <textarea name="note" rows="5" cols="30" class="inputfield" placeholder="(Optional) Miscellaneous information"></textarea>
     </p>
     <p>Keyword(s):<br>
         <textarea rows="4" cols="30" type="text" class="inputfield" name="keywords" placeholder="(Optional) Enter keyword(s), separate keywords by semicolons (;)"></textarea>
