--- a/src/templates/new_book_reference.html
+++ b/src/templates/new_book_reference.html
@@ -27,7 +27,7 @@ Add a new book reference | References
         <input type="text" name="publisher" class="inputfield" placeholder="Enter publisher name" required>
     </p>
     <p>Editor(s):<br>
-        <input type="text" name="editors" class="inputfield" placeholder="Enter editor(s), separate editors by semicolons (;)" required>
+        <input type="text" name="editors" class="inputfield" placeholder="(Optional) Enter editor(s), separate editors by semicolons (;)">
     </p>
     <p>Keyword(s):<br>
         <textarea rows="4" cols="30" type="text" class="inputfield" name="keywords" placeholder="(Optional) Enter keyword(s), separate keywords by semicolons (;)"></textarea>
