--- a/src/templates/new_inbook_reference.html
+++ b/src/templates/new_inbook_reference.html
@@ -20,14 +20,14 @@ Add a new inbook reference | References
     <p>Title:<br>
         <input type="text" name="title" rows="2" cols="30" class="inputfield" placeholder="Enter title of the chapter or section" required>
     </p>
-    <p>Book title:<br>
-        <input type="text" name="booktitle" rows="2" cols="30" class="inputfield" placeholder="Enter book title" required>
-    </p>
     <p>Year of Publication:<br>
         <input type="number" name="year" class="inputfield" placeholder="Enter publication year" required>
     </p>
     <p>Publisher:<br>
         <input type="text" name="publisher" class="inputfield" placeholder="Enter publisher name" required>
+    </p>
+    <p>Book title:<br>
+        <input type="text" name="booktitle" rows="2" cols="30" class="inputfield" placeholder="(Optional) Enter book title">
     </p>
     <p>Editor:<br>
         <textarea name="editors" rows="2" cols="30" class="inputfield" placeholder="(Optional) Enter editor(s), separate editors by semicolons (;)"></textarea>
