--- a/src/templates/new_misc_reference.html
+++ b/src/templates/new_misc_reference.html
@@ -21,7 +21,7 @@ Add a new miscellaneous reference | References
         <input type="text" name="title" class="inputfield" placeholder="Enter title" required>
     </p>
     <p>How Published:<br>
-        <input type="text" name="howpublished" class="inputfield" placeholder="Enter how published" required>
+        <input type="text" name="howpublished" class="inputfield" placeholder="(Optional) Enter how published">
     </p>
     <p>Month of Publication:<br>
         <input type="text" name="month" class="inputfield" placeholder="(Optional) Enter publication month">
