--- a/src/static/styles/list_of_references.css
+++ b/src/static/styles/list_of_references.css
@@ -83,7 +83,7 @@ form{
     background-color: hsl(256 22 13);
     border: 1px solid hsl(256 22 95);
     border-radius: 10px;
-    transition: transform 0.2s, background-color 0.2s, color 0.2s;
+    transition: transform 0.2s, background-color 0.2s, color 0.2s, filter 0.2s;
     font-size: 14px;
 }
 
