--- a/src/static/styles/list_of_references.css
+++ b/src/static/styles/list_of_references.css
@@ -35,6 +35,7 @@ pre{
     flex-direction: column;
     align-items: left; 
     vertical-align: middle;
+    margin-top: 10px;
 }
 
 form{
@@ -99,6 +100,16 @@ form{
     transform: scale(0.975);
 }
 
+.inputfield{
+    width: 240px;
+    box-sizing: border-box;
+    border: 1px solid rgb(255,255,255);
+    padding: 10px 10px 10px 10px;
+    height: 29px;
+    border-radius: 4px;
+    color: white;
+    background-color: rgb(30, 26, 41);
+}
 
 .delete{
     border: 1px solid hsl(0 100 66); 
